--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/f330.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/f330.sdf.jinja
@@ -706,7 +706,8 @@
       z = -0.025,
       roll = -components.rad90,
       pitch = components.rad20,
-      yaw = components.rad120)
+      yaw = components.rad120,
+      update_rate = 5)
     }}
     <!--}-->
 
@@ -722,14 +723,15 @@
       z = -0.025,
       roll = -components.rad90,
       pitch = components.rad20,
-      yaw = -components.rad120)
+      yaw = -components.rad120,
+      update_rate = 5)
     }}
     <!--}-->
 
     <!-- picoflexx down {-->
     {{ components.picoflexx_macro(
       namespace = namespace,
-      camera_name = "picoflexx_down",
+      camera_name = "picoflexx_back",
       camera_suffix="",
       parent_link = root,
       enable_realistic_picoflexx = enable_realistic_picoflexx,
@@ -738,7 +740,8 @@
       z = 0.02,
       roll =  0,
       pitch = components.rad45,
-      yaw = components.rad180)
+      yaw = components.rad180,
+      update_rate = 5)
     }}
     <!--}-->
 
@@ -748,7 +751,7 @@
     <!-- oakdw  -0.067 -0.075 0.073 yaw=-70deg [m] -->
     {{ components.oakd_macro(
       namespace = namespace,
-      camera_name = "oakd",
+      camera_name = "oak",
       camera_suffix="",
       parent_link = root,
       enable_realistic_oakd = enable_realistic_oakd,
