Fixed name of the front picoflexx.

--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/f330.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/f330.sdf.jinja
@@ -768,11 +768,11 @@
     }}
     <!--}-->
 
-    <!-- picoflexx up {-->
+    <!-- picoflexx front {-->
     {{ components.picoflexx_macro(
       version = "flexx2_wide",
       namespace = namespace,
-      camera_name = "picoflexx_up",
+      camera_name = "picoflexx_front",
       camera_suffix="",
       parent_link = root,
       enable_realistic_picoflexx = enable_realistic_picoflexx,
