--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/generic_components.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/generic_components.sdf.jinja
@@ -789,6 +789,16 @@ limitations under the License.
 {%- endmacro -%}
 {# <!--}--} #}
 
+{# tf static publisher macro {--> #}
+{%- macro tf_static_macro(namespace, parent_link, child_link) -%}
+<plugin name="{{ parent_link }}_to_{{ child_link }}_tf_plugin" filename="libMrsGazeboCommonResources_LinkStaticTFPublisher.so">
+  <namespace>{{ namespace }}</namespace>
+  <parentLink>{{ parent_link }}</parentLink>
+  <childLink>{{ child_link }}</childLink>
+</plugin>
+{%- endmacro -%}
+{# <!--}--> #}
+
 {# ========================== gazebo plugins ========================= #}
 
 {# gazebo_gps_macro {--> #}
