--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/component_snippets.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/component_snippets.sdf.jinja
@@ -40,6 +40,7 @@ limitations under the License.
 
 {%- set rad0 = 0.0 -%}
 {%- set rad10 = 10 * pi / 180 -%}
+{%- set rad15 = 15 * pi / 180 -%}
 {%- set rad20 = 20 * pi / 180 -%}
 {%- set rad30 = 30 * pi / 180 -%}
 {%- set rad45 = 45 * pi / 180 -%}
@@ -50,6 +51,7 @@ limitations under the License.
 {%- set rad90 = 90 * pi / 180 -%}
 {%- set rad95 = 95 * pi / 180 -%}
 {%- set rad100 = 100 * pi / 180 -%}
+{%- set rad110 = 110 * pi / 180 -%}
 {%- set rad115 = 115 * pi / 180 -%}
 {%- set rad120 = 120 * pi / 180 -%}
 {%- set rad135 = 135 * pi / 180 -%}
